--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
   "license": "MIT",
   "dependencies": {
     "koa": "^2.11.0",
+    "koa-bodyparser": "^4.3.0",
+    "koa-json": "^2.0.2",
+    "koa-router": "^8.0.8",
     "sequelize": "^5.21.6",
     "sqlite3": "^4.1.1"
   },
