--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
   "author": "fungleo",
   "license": "MIT",
   "dependencies": {
+    "best-require": "^1.1.4",
     "koa": "^2.11.0",
-    "koa-bodyparser": "^4.3.0",
+    "koa-body": "^4.1.1",
     "koa-json": "^2.0.2",
     "koa-router": "^8.0.8",
+    "koa-static": "^5.0.0",
     "sequelize": "^5.21.6",
     "sqlite3": "^4.1.1"
   },
