--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "koa": "^2.11.0",
     "koa-body": "^4.1.1",
     "koa-json": "^2.0.2",
+    "koa-log4": "^2.3.2",
     "koa-router": "^8.0.8",
     "koa-static": "^5.0.0",
     "sequelize": "^5.21.6",
