--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "koa-log4": "^2.3.2",
     "koa-router": "^8.0.8",
     "koa-static": "^5.0.0",
+    "node-rsa": "^1.0.8",
     "sequelize": "^5.21.6",
     "sqlite3": "^4.1.1"
   },
