优化部分代码，调整pkg 打包不成功的问题

--- a/package.json
+++ b/package.json
@@ -34,9 +34,7 @@
   },
   "pkg": {
     "output": "restful-cms-koa",
-    "targets": [
-      "node10-macos-x64"
-    ]
+    "scripts": "app/**/*.js"
   },
   "bin": "app.js"
 }
