--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "koa-log4": "^2.3.2",
     "koa-router": "^8.0.8",
     "koa-static": "^5.0.0",
-    "marked": "^1.0.0",
+    "marked": "^1.1.1",
     "node-rsa": "^1.0.8",
+    "pg": "^8.3.0",
+    "pg-hstore": "^2.3.3",
     "sequelize": "^5.21.6",
     "sqlite3": "^4.1.1"
   },
