--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "pg": "^8.3.0",
     "pg-hstore": "^2.3.3",
     "sequelize": "^5.21.6",
-    "sqlite3": "^4.1.1"
+    "sqlite3": "^4.1.1",
+    "xss": "^1.0.8"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
